// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertToPostman any-auth 1`] = `
"{
  \\"info\\": {
    \\"name\\": \\"any-auth\\",
    \\"schema\\": \\"https://schema.getpostman.com/json/collection/v2.1.0/collection.json\\"
  },
  \\"variable\\": [
    {
      \\"key\\": \\"origin\\",
      \\"value\\": \\"http://localhost:8080\\",
      \\"type\\": \\"string\\"
    },
    {
      \\"key\\": \\"username\\",
      \\"value\\": \\"\\",
      \\"type\\": \\"string\\"
    },
    {
      \\"key\\": \\"password\\",
      \\"value\\": \\"\\",
      \\"type\\": \\"string\\"
    },
    {
      \\"key\\": \\"My-Header\\",
      \\"value\\": \\"\\",
      \\"type\\": \\"string\\"
    }
  ],
  \\"auth\\": {
    \\"basic\\": [
      {
        \\"key\\": \\"username\\",
        \\"value\\": \\"{{username}}\\",
        \\"type\\": \\"string\\"
      },
      {
        \\"key\\": \\"password\\",
        \\"value\\": \\"{{password}}\\",
        \\"type\\": \\"string\\"
      }
    ],
    \\"type\\": \\"basic\\"
  },
  \\"item\\": [
    {
      \\"name\\": \\"PostsService\\",
      \\"item\\": [
        {
          \\"name\\": \\"createPost\\",
          \\"request\\": {
            \\"url\\": {
              \\"raw\\": \\"{{origin}}/create\\",
              \\"host\\": [
                \\"{{origin}}\\"
              ],
              \\"path\\": [
                \\"create\\"
              ],
              \\"query\\": [],
              \\"variable\\": []
            },
            \\"header\\": [
              {
                \\"key\\": \\"My-Header\\",
                \\"value\\": \\"{{My-Header}}\\",
                \\"type\\": \\"string\\"
              }
            ],
            \\"method\\": \\"POST\\",
            \\"body\\": {
              \\"mode\\": \\"raw\\",
              \\"raw\\": \\"{\\\\n    \\\\\\"title\\\\\\": \\\\\\"example\\\\\\",\\\\n    \\\\\\"content\\\\\\": \\\\\\"example\\\\\\"\\\\n}\\",
              \\"options\\": {
                \\"raw\\": {
                  \\"language\\": \\"json\\"
                }
              }
            }
          },
          \\"response\\": []
        },
        {
          \\"name\\": \\"getPost\\",
          \\"request\\": {
            \\"url\\": {
              \\"raw\\": \\"{{origin}}/:postId\\",
              \\"host\\": [
                \\"{{origin}}\\"
              ],
              \\"path\\": [
                \\":postId\\"
              ],
              \\"query\\": [],
              \\"variable\\": [
                {
                  \\"key\\": \\"postId\\",
                  \\"value\\": \\"\\"
                }
              ]
            },
            \\"header\\": [
              {
                \\"key\\": \\"My-Header\\",
                \\"value\\": \\"{{My-Header}}\\",
                \\"type\\": \\"string\\"
              }
            ],
            \\"method\\": \\"GET\\"
          },
          \\"response\\": []
        }
      ]
    }
  ]
}"
`;

exports[`convertToPostman any-auth 2`] = `Array []`;

exports[`convertToPostman test-api 1`] = `
"{
  \\"info\\": {
    \\"name\\": \\"blog-post-api\\",
    \\"schema\\": \\"https://schema.getpostman.com/json/collection/v2.1.0/collection.json\\"
  },
  \\"variable\\": [
    {
      \\"key\\": \\"origin\\",
      \\"value\\": \\"http://localhost:8080\\",
      \\"type\\": \\"string\\"
    }
  ],
  \\"item\\": [
    {
      \\"name\\": \\"PostsService\\",
      \\"item\\": [
        {
          \\"name\\": \\"createPost\\",
          \\"request\\": {
            \\"description\\": \\"Creates a blog post and returns blog post id.\\",
            \\"url\\": {
              \\"raw\\": \\"{{origin}}/create\\",
              \\"host\\": [
                \\"{{origin}}\\"
              ],
              \\"path\\": [
                \\"create\\"
              ],
              \\"query\\": [],
              \\"variable\\": []
            },
            \\"header\\": [
              {
                \\"key\\": \\"x-service-header\\",
                \\"type\\": \\"text\\",
                \\"value\\": \\"\\\\\\"example\\\\\\"\\"
              },
              {
                \\"key\\": \\"x-endpoint-header\\",
                \\"description\\": \\"I'm a header!\\",
                \\"type\\": \\"text\\",
                \\"value\\": \\"\\\\\\"example\\\\\\"\\"
              }
            ],
            \\"method\\": \\"POST\\",
            \\"body\\": {
              \\"mode\\": \\"raw\\",
              \\"raw\\": \\"{\\\\n    \\\\\\"title\\\\\\": \\\\\\"example\\\\\\",\\\\n    \\\\\\"author\\\\\\": {\\\\n        \\\\\\"type\\\\\\": \\\\\\"name\\\\\\",\\\\n        \\\\\\"value\\\\\\": \\\\\\"George Washington\\\\\\"\\\\n    },\\\\n    \\\\\\"content\\\\\\": \\\\\\"example\\\\\\",\\\\n    \\\\\\"postType\\\\\\": \\\\\\"LONG\\\\\\"\\\\n}\\",
              \\"options\\": {
                \\"raw\\": {
                  \\"language\\": \\"json\\"
                }
              }
            }
          },
          \\"response\\": []
        },
        {
          \\"name\\": \\"getPost\\",
          \\"request\\": {
            \\"description\\": \\"Gets a blog post.\\",
            \\"url\\": {
              \\"raw\\": \\"{{origin}}/:postId\\",
              \\"host\\": [
                \\"{{origin}}\\"
              ],
              \\"path\\": [
                \\":postId\\"
              ],
              \\"query\\": [],
              \\"variable\\": [
                {
                  \\"key\\": \\"postId\\",
                  \\"value\\": \\"123e4567-e89b-12d3-a456-426614174000\\"
                }
              ]
            },
            \\"header\\": [
              {
                \\"key\\": \\"x-service-header\\",
                \\"type\\": \\"text\\",
                \\"value\\": \\"\\\\\\"I'm a service header!\\\\\\"\\"
              }
            ],
            \\"method\\": \\"GET\\"
          },
          \\"response\\": [
            {
              \\"name\\": \\"Successful getPost\\",
              \\"status\\": \\"OK\\",
              \\"code\\": 200,
              \\"originalRequest\\": {
                \\"description\\": \\"Gets a blog post.\\",
                \\"url\\": {
                  \\"raw\\": \\"{{origin}}/:postId\\",
                  \\"host\\": [
                    \\"{{origin}}\\"
                  ],
                  \\"path\\": [
                    \\":postId\\"
                  ],
                  \\"query\\": [],
                  \\"variable\\": [
                    {
                      \\"key\\": \\"postId\\",
                      \\"value\\": \\"123e4567-e89b-12d3-a456-426614174000\\"
                    }
                  ]
                },
                \\"header\\": [
                  {
                    \\"key\\": \\"x-service-header\\",
                    \\"type\\": \\"text\\",
                    \\"value\\": \\"\\\\\\"I'm a service header!\\\\\\"\\"
                  }
                ],
                \\"method\\": \\"GET\\"
              },
              \\"body\\": \\"{\\\\n    \\\\\\"writtenDate\\\\\\": \\\\\\"2022-12-15T22:06:28+00:00\\\\\\",\\\\n    \\\\\\"id\\\\\\": \\\\\\"123e4567-e89b-12d3-a456-426614174000\\\\\\",\\\\n    \\\\\\"type\\\\\\": \\\\\\"LONG\\\\\\",\\\\n    \\\\\\"title\\\\\\": \\\\\\"My Post\\\\\\",\\\\n    \\\\\\"author\\\\\\": {\\\\n        \\\\\\"type\\\\\\": \\\\\\"anonymous\\\\\\"\\\\n    },\\\\n    \\\\\\"content\\\\\\": \\\\\\"I'm a blog post\\\\\\"\\\\n}\\",
              \\"_postman_previewlanguage\\": \\"json\\"
            },
            {
              \\"name\\": \\"Failed getPost (PostNotFoundError)\\",
              \\"status\\": \\"PostNotFoundError\\",
              \\"code\\": 400,
              \\"originalRequest\\": {
                \\"description\\": \\"Gets a blog post.\\",
                \\"url\\": {
                  \\"raw\\": \\"{{origin}}/:postId\\",
                  \\"host\\": [
                    \\"{{origin}}\\"
                  ],
                  \\"path\\": [
                    \\":postId\\"
                  ],
                  \\"query\\": [],
                  \\"variable\\": [
                    {
                      \\"key\\": \\"postId\\",
                      \\"value\\": \\"123e4567-e89b-12d3-a456-426614174000\\"
                    }
                  ]
                },
                \\"header\\": [
                  {
                    \\"key\\": \\"x-service-header\\",
                    \\"type\\": \\"text\\",
                    \\"value\\": \\"\\\\\\"I'm a service header!\\\\\\"\\"
                  }
                ],
                \\"method\\": \\"GET\\"
              },
              \\"body\\": \\"{\\\\n    \\\\\\"id\\\\\\": \\\\\\"123e4567-e89b-12d3-a456-426614174000\\\\\\"\\\\n}\\",
              \\"_postman_previewlanguage\\": \\"json\\"
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`convertToPostman test-api 2`] = `
Array [
  Object {
    "request": undefined,
    "response": Object {
      "author": Object {
        "type": "anonymous",
      },
      "content": "I'm a blog post",
      "id": "123e4567-e89b-12d3-a456-426614174000",
      "title": "My Post",
      "type": "LONG",
      "writtenDate": "2022-12-15T22:06:28+00:00",
    },
  },
  Object {
    "request": undefined,
    "response": Object {
      "id": "123e4567-e89b-12d3-a456-426614174000",
    },
  },
]
`;
